update index page

--- a/site/404.html
+++ b/site/404.html
@@ -50,35 +50,42 @@
       </div>
 
       <!-- main header -->
-      <header class="main-header header-three text-white">
-        <div class="header-top-wrap bg-blue py-10">
-          <div class="container">
-            <div class="header-top">
-              <div class="top-left">
-                <ul>
-                  <li>Call Us: <a href="callto:548978478">548978478</a></li>
-                  <li>
-                    Email us:
-                    <a href="mailto:jdcomputers@gmail.com"
-                      >jdcomputers@gmail.com</a
-                    >
-                  </li>
-                </ul>
-              </div>
-              <div class="top-right">
-                <div class="office-time">
-                  <i class="far fa-clock"></i><span>08:00 am - 06:00 pm</span>
-                </div>
-              </div>
+      <header class="main-header header-one">
+        <div class="header-top bg-lighter py-10">
+          <div class="top-left">
+            <ul>
+              <li>Call Us: <a href="callto:548978478">548978478</a></li>
+              <li>
+                Email us:
+                <a href="mailto:jdcomputers@gmail.com">jdcomputers@gmail.com</a>
+              </li>
+              <li>Our address: Gregory Hills 2557</li>
+            </ul>
+          </div>
+          <div class="top-right">
+            <div class="office-time">
+              <i class="far fa-clock"></i><span>08:00 am - 06:00 pm</span>
+            </div>
+            <div class="social-style-one">
+              <a href="http://facebook.com"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+              <a href="https://www.instagram.com/"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="https://www.pinterest.com/"
+                ><i class="fab fa-pinterest-p"></i
+              ></a>
             </div>
           </div>
         </div>
 
         <!--Header-Upper-->
-        <div class="header-upper">
-          <div class="container clearfix">
+        <div class="header-upper bg-white">
+          <div class="container-fluid clearfix">
             <div class="header-inner d-flex align-items-center">
-              <div class="logo-outer">
+              <div class="logo-outer bg-blue py-30 px-85">
                 <div class="logo">
                   <a href="index.html"
                     ><img
@@ -93,7 +100,7 @@
                 <!-- Main Menu -->
                 <nav class="main-menu navbar-expand-lg">
                   <div class="navbar-header">
-                    <div class="mobile-logo py-15">
+                    <div class="mobile-logo bg-blue p-15">
                       <a href="index.html">
                         <img
                           src="assets/images/logos/logo.svg"
@@ -118,162 +125,18 @@
 
                   <div class="navbar-collapse collapse clearfix">
                     <ul class="navigation clearfix">
-                      <li class="current dropdown">
-                        <a href="#">Home</a>
-                        <ul>
-                          <li class="dropdown">
-                            <a href="#">MultiPage</a>
-                            <ul>
-                              <li><a href="index.html">Home One</a></li>
-                              <li><a href="index2.html">Home Two</a></li>
-                              <li><a href="index3.html">Home Three</a></li>
-                              <li><a href="index4.html">Home Four</a></li>
-                              <li><a href="index5.html">Home Five</a></li>
-                              <li><a href="index6.html">Home Six</a></li>
-                              <li><a href="index7.html">Home Seven</a></li>
-                            </ul>
-                          </li>
-                          <li class="dropdown">
-                            <a href="#">OnePage</a>
-                            <ul>
-                              <li><a href="index-onepage.html">Home One</a></li>
-                              <li>
-                                <a href="index2-onepage.html">Home Two</a>
-                              </li>
-                              <li>
-                                <a href="index3-onepage.html">Home Three</a>
-                              </li>
-                              <li>
-                                <a href="index4-onepage.html">Home Four</a>
-                              </li>
-                              <li>
-                                <a href="index5-onepage.html">Home Five</a>
-                              </li>
-                              <li>
-                                <a href="index6-onepage.html">Home Six</a>
-                              </li>
-                              <li>
-                                <a href="index7-onepage.html">Home Seven</a>
-                              </li>
-                            </ul>
-                          </li>
-                        </ul>
+                      <li>
+                        <a href="index.html">Home</a>
                       </li>
-                      <li class="dropdown">
-                        <a href="#">About Us</a>
-                        <ul>
-                          <li><a href="about.html">About One</a></li>
-                          <li><a href="about-2.html">About Two</a></li>
-                          <li><a href="about-3.html">About Three</a></li>
-                          <li><a href="about-4.html">About Four</a></li>
-                          <li><a href="about-5.html">About Five</a></li>
-                          <li><a href="about-6.html">About Six</a></li>
-                          <li><a href="about-7.html">About Seven</a></li>
-                        </ul>
+                      <li class="current">
+                        <a href="about.html">About Us</a>
                       </li>
-                      <li class="dropdown">
-                        <a href="#">service</a>
-                        <ul>
-                          <li><a href="services.html">Services One</a></li>
-                          <li><a href="services-2.html">Services Two</a></li>
-                          <li><a href="services-3.html">Services Three</a></li>
-                          <li><a href="services-4.html">Services Four</a></li>
-                          <li><a href="services-5.html">Services Five</a></li>
-                          <li><a href="services-6.html">Services Six</a></li>
-                          <li><a href="services-7.html">Services Seven</a></li>
-                          <li>
-                            <a href="service-details.html">Service Details</a>
-                          </li>
-                        </ul>
+                      <li>
+                        <a href="services.html">service</a>
                       </li>
-                      <li class="dropdown">
-                        <a href="#">Portfolio</a>
-                        <ul>
-                          <li><a href="portfolio.html">Portfolio</a></li>
-                          <li><a href="portfolio-2.html">Portfolio Two</a></li>
-                          <li>
-                            <a href="portfolio-3.html">Portfolio Three</a>
-                          </li>
-                          <li><a href="portfolio-4.html">Portfolio Four</a></li>
-                          <li>
-                            <a href="portfolio-details.html"
-                              >Portfolio Details</a
-                            >
-                          </li>
-                        </ul>
+                      <li>
+                        <a href="contact.html">Contact</a>
                       </li>
-                      <li class="dropdown">
-                        <a href="#">pages</a>
-                        <ul>
-                          <li><a href="counter.html">Counter Page</a></li>
-                          <li class="dropdown">
-                            <a href="#">Shop Page</a>
-                            <ul>
-                              <li><a href="shop.html">Shop Page</a></li>
-                              <li>
-                                <a href="shop-details.html">Shop Details</a>
-                              </li>
-                            </ul>
-                          </li>
-                          <li class="dropdown">
-                            <a href="#">Team Member</a>
-                            <ul>
-                              <li><a href="team-1.html">Team One</a></li>
-                              <li><a href="team-2.html">Team Two</a></li>
-                              <li><a href="team-3.html">Team Three</a></li>
-                              <li><a href="team-4.html">Team Four</a></li>
-                              <li>
-                                <a href="team-profile.html">Team Single</a>
-                              </li>
-                            </ul>
-                          </li>
-                          <li class="dropdown">
-                            <a href="#">Pricing page</a>
-                            <ul>
-                              <li><a href="pricing.html">Pricing One</a></li>
-                              <li><a href="pricing-2.html">Pricing Two</a></li>
-                              <li>
-                                <a href="pricing-3.html">Pricing Three</a>
-                              </li>
-                              <li><a href="pricing-4.html">Pricing Four</a></li>
-                              <li><a href="pricing-5.html">Pricing Five</a></li>
-                              <li><a href="pricing-6.html">Pricing Six</a></li>
-                            </ul>
-                          </li>
-                          <li class="dropdown">
-                            <a href="#">Testimonials page</a>
-                            <ul>
-                              <li>
-                                <a href="testimonial.html">Testimonials One</a>
-                              </li>
-                              <li>
-                                <a href="testimonial-2.html"
-                                  >Testimonials Two</a
-                                >
-                              </li>
-                              <li>
-                                <a href="testimonial-3.html"
-                                  >Testimonials Three</a
-                                >
-                              </li>
-                              <li>
-                                <a href="testimonial-4.html"
-                                  >Testimonials Four</a
-                                >
-                              </li>
-                            </ul>
-                          </li>
-                          <li><a href="404.html">404 Error</a></li>
-                        </ul>
-                      </li>
-                      <li class="dropdown">
-                        <a href="#">blog</a>
-                        <ul>
-                          <li><a href="blog.html">Blog Standard</a></li>
-                          <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
-                      </li>
-                      <li><a href="contact.html">Contact</a></li>
                     </ul>
                   </div>
                 </nav>
@@ -289,7 +152,6 @@
         </div>
         <!--End Header Upper-->
       </header>
-
       <!-- Page Banner Start -->
       <section
         class="page-banner bgs-cover overlay pt-50"
