--- a/site/index.html
+++ b/site/index.html
@@ -186,18 +186,15 @@
                   <div class="icon">
                     <i class="flaticon flaticon-computer"></i>
                   </div>
-                  <h6>Product Service</h6>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod
-                  </p>
+                  <h6>Data Recovery</h6>
+                  <p>We are data recovery experts to recover your lost data.</p>
                   <a class="btn-circle" href="service-details.html"
                     ><i class="fas fa-long-arrow-alt-right"></i
                   ></a>
                 </div>
                 <div class="service-hover bg-blue text-white">
-                  <h3>Preparing For Your Business Success With IT Solution</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisc</p>
+                  <h3>Need Data Recovery Experts?</h3>
+
                   <a href="service-details.html" class="theme-btn"
                     >Learn More</a
                   >
@@ -210,11 +207,8 @@
                   <div class="icon">
                     <i class="flaticon flaticon-web-development-4"></i>
                   </div>
-                  <h6>IT Management</h6>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod
-                  </p>
+                  <h6>PC Builds and Upgrade</h6>
+                  <p>Customize your needs with experts.</p>
                   <a class="btn-circle" href="service-details.html"
                     ><i class="fas fa-long-arrow-alt-right"></i
                   ></a>
