--- a/Restly/services.html
+++ b/Restly/services.html
@@ -321,7 +321,7 @@
                     <div class="col-xl-4 col-md-6">
                         <div class="feature-item wow fadeInUp delay-1-2s">
                             <div class="icon">
-                               
+                                <i class="flaticon flaticon-plan"></i>
                             </div>
                             <div class="feature-content">
                                 <h5>Hard Disk Drive Testing and Repair</h5>
