--- a/site/about.html
+++ b/site/about.html
@@ -54,7 +54,9 @@
         <div class="header-top bg-lighter py-10">
           <div class="top-left">
             <ul>
-              <li>Call Us: <a href="callto:548978478">548978478</a></li>
+              <li>
+                Call Us: <a href="callto:+61 452 441 530">+61 452 441 530</a>
+              </li>
               <li>
                 Email us:
                 <a href="mailto:jdcomputers@gmail.com">jdcomputers@gmail.com</a>
@@ -451,7 +453,7 @@
                         <div class="content">
                           <span>Call Us</span>
                           <h5>
-                            <a href="callto:+012-345-6789">+012-345-6789</a>
+                            <a href="callto:+61 452 441 530">+61 452 441 530</a>
                           </h5>
                         </div>
                       </li>
@@ -460,8 +462,8 @@
                         <div class="content">
                           <span>Write to Us</span>
                           <h5>
-                            <a href="mailto:info@example.com"
-                              >info@example.com</a
+                            <a href="mailto:jdcomputers@gmail.com"
+                              >jdcomputers@gmail.com</a
                             >
                           </h5>
                         </div>
@@ -495,7 +497,7 @@
                 <i class="fas fa-phone-alt"></i>
                 <div class="content">
                   <span>Call Us</span>
-                  <h5><a href="callto:+012-345-6789">+012-345-6789</a></h5>
+                  <h5><a href="callto:+61 452 441 530">+61 452 441 530</a></h5>
                 </div>
               </li>
               <li>
@@ -503,7 +505,9 @@
                 <div class="content">
                   <span>Write to Us</span>
                   <h5>
-                    <a href="mailto:info@example.com">info@example.com</a>
+                    <a href="mailto:jdcomputers@gmail.com"
+                      >jdcomputers@gmail.com</a
+                    >
                   </h5>
                 </div>
               </li>
