--- a/site/index.html
+++ b/site/index.html
@@ -54,7 +54,9 @@
         <div class="header-top bg-lighter py-10">
           <div class="top-left">
             <ul>
-              <li>Call Us: <a href="callto:548978478">548978478</a></li>
+              <li>
+                Call Us: <a href="callto:+61 452 441 530">+61 452 441 530</a>
+              </li>
               <li>
                 Email us:
                 <a href="mailto:jdcomputers@gmail.com">jdcomputers@gmail.com</a>
@@ -96,48 +98,16 @@
                 </div>
               </div>
 
-              <div class="nav-outer clearfix d-flex align-items-center">
+              <div
+                class="d-flex justify-content-between align-items-center w-100"
+              >
                 <!-- Main Menu -->
-                <nav class="main-menu navbar-expand-lg">
-                  <div class="navbar-header">
-                    <div class="mobile-logo bg-blue p-15">
-                      <a href="index.html">
-                        <img
-                          src="assets/images/logos/logo.svg"
-                          alt="Logo"
-                          title="Logo"
-                        />
-                      </a>
-                    </div>
 
-                    <!-- Toggle Button -->
-                    <button
-                      type="button"
-                      class="navbar-toggle"
-                      data-toggle="collapse"
-                      data-target=".navbar-collapse"
-                    >
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                    </button>
-                  </div>
+                <h3 class="d-flex">
+                  <div class="col-lg-5 col-sm-12">7 DAYS OPEN</div>
+                  <div class="col-lg-7 col-sm-12">Call +61 452 441 530</div>
+                </h3>
 
-                  <div class="navbar-collapse collapse clearfix">
-                    <ul class="navigation clearfix">
-                      <li class="current">
-                        <a href="index.html">Home</a>
-                      </li>
-                      <li>
-                        <a href="about.html">About Us</a>
-                      </li>
-                      <li>
-                        <a href="services.html">service</a>
-                      </li>
-                      <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                  </div>
-                </nav>
                 <!-- Main Menu End-->
 
                 <!-- Menu Button -->
@@ -154,7 +124,7 @@
       <!-- Hero Section Start -->
       <section
         class="hero-section overlay bgs-cover pt-200 pb-150"
-        style="background-image: url(assets/images/hero/hero-one.jpg)"
+        style="background-image: url(assets/images/photo-03.jpg)"
       >
         <div class="container">
           <div class="row justify-content-center">
@@ -281,7 +251,7 @@
           <div class="row align-items-center">
             <div class="col-lg-6">
               <div class="about-image-shape rmb-70 wow fadeInLeft delay-0-2s">
-                <img src="assets/images/about/about.png" alt="About" />
+                <img src="assets/images/photo-05.jpg" alt="About" />
               </div>
             </div>
             <div class="col-lg-6">
@@ -313,36 +283,29 @@
             style="background-image: url(assets/images/counter/counter-bg.jpg)"
           >
             <div class="row">
-              <div class="col-lg-3 col-sm-6">
+              <div class="col-lg-4 col-sm-6">
                 <div class="success-item wow fadeInUp delay-0-2s">
-                  <span class="count-text" data-speed="5000" data-stop="520"
+                  <span class="count-text" data-speed="5000" data-stop="200"
                     >0</span
                   >
                   <p>Projects Done</p>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-6">
-                <div class="success-item wow fadeInUp delay-0-4s">
-                  <span class="count-text plus" data-speed="5000" data-stop="24"
-                    >0</span
-                  >
-                  <p>Awards Won</p>
-                </div>
-              </div>
-              <div class="col-lg-3 col-sm-6">
+
+              <div class="col-lg-4 col-sm-6">
                 <div class="success-item wow fadeInUp delay-0-6s">
-                  <span class="count-text plus" data-speed="5000" data-stop="12"
+                  <span class="count-text plus" data-speed="5000" data-stop="2"
                     >0</span
                   >
                   <p>Years Experience</p>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-6">
+              <div class="col-lg-4 col-sm-6">
                 <div class="success-item wow fadeInUp delay-0-8s">
                   <span
                     class="count-text plus"
                     data-speed="5000"
-                    data-stop="352"
+                    data-stop="200"
                     >0</span
                   >
                   <p>Happy Clients</p>
@@ -531,251 +494,7 @@
       </section>
       <!-- Wrok Progress End -->
 
-      <!-- Pricing Section Start -->
-      <section class="pricing-section pt-115 rpt-95 pb-90 rpb-70">
-        <div class="container">
-          <div class="section-title text-center mb-35">
-            <span class="sub-title">Pricing Packages</span>
-            <h2>Choose Your Best Plan</h2>
-          </div>
-          <div class="row justify-content-center">
-            <div class="col-lg-4 col-sm-6">
-              <div class="pricing-item wow fadeInUp delay-0-2s">
-                <div class="pricing-header">
-                  <h5 class="pricing-title">Standard</h5>
-                  <span class="price">29.99</span>
-                  <h5 class="pricing-time">Per Month</h5>
-                </div>
-                <ul>
-                  <li>Limited install</li>
-                  <li>Unlimited Download</li>
-                  <li>Free One Year Support</li>
-                  <li>Free 15 GB Linux Hosting</li>
-                </ul>
-                <a class="theme-btn btn-circle" href="#">Choose Plan</a>
-              </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <div class="pricing-item wow fadeInUp delay-0-4s">
-                <div class="pricing-header">
-                  <h5 class="pricing-title">BUSINESS</h5>
-                  <span class="price">59.99</span>
-                  <h5 class="pricing-time">Per Month</h5>
-                </div>
-                <ul>
-                  <li>Limited install</li>
-                  <li>Unlimited Download</li>
-                  <li>Free One Year Support</li>
-                  <li>Free 15 GB Linux Hosting</li>
-                </ul>
-                <a class="theme-btn btn-circle" href="#">Choose Plan</a>
-              </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <div class="pricing-item wow fadeInUp delay-0-6s">
-                <div class="pricing-header">
-                  <h5 class="pricing-title">PREMIUM</h5>
-                  <span class="price">79.99</span>
-                  <h5 class="pricing-time">Per Month</h5>
-                </div>
-                <ul>
-                  <li>Limited install</li>
-                  <li>Unlimited Download</li>
-                  <li>Free One Year Support</li>
-                  <li>Free 15 GB Linux Hosting</li>
-                </ul>
-                <a class="theme-btn btn-circle" href="#">Choose Plan</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
       <!-- Pricing Section End -->
-
-      <!-- Gallery Section Start -->
-      <section
-        class="gallery-section overlay text-white pt-115 rpt-95 pb-100 rpb-80"
-      >
-        <div class="container-fluid px-0">
-          <div class="section-title text-center mb-55">
-            <span class="sub-title">Our Gallery</span>
-            <h2>Some Of Our Work</h2>
-          </div>
-          <div class="row small-gap">
-            <div class="col-lg-3 col-sm-6">
-              <div class="gallery-item wow fadeInUp delay-0-2s">
-                <img src="assets/images/gallery/gallery-1.jpg" alt="Gallery" />
-                <div class="gallery-content">
-                  <span class="category"
-                    ><a href="portfolio-details.html">Our Gallery</a></span
-                  >
-                  <h5>
-                    <a href="portfolio-details.html">Laptop in the office</a>
-                  </h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-              <div class="gallery-item wow fadeInUp delay-0-4s">
-                <img src="assets/images/gallery/gallery-2.jpg" alt="Gallery" />
-                <div class="gallery-content">
-                  <span class="category"
-                    ><a href="portfolio-details.html">Our Gallery</a></span
-                  >
-                  <h5>
-                    <a href="portfolio-details.html">Laptop in the office</a>
-                  </h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-              <div class="gallery-item wow fadeInUp delay-0-6s">
-                <img src="assets/images/gallery/gallery-3.jpg" alt="Gallery" />
-                <div class="gallery-content">
-                  <span class="category"
-                    ><a href="portfolio-details.html">Our Gallery</a></span
-                  >
-                  <h5>
-                    <a href="portfolio-details.html">Laptop in the office</a>
-                  </h5>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-3 col-sm-6">
-              <div class="gallery-item wow fadeInUp delay-0-8s">
-                <img src="assets/images/gallery/gallery-4.jpg" alt="Gallery" />
-                <div class="gallery-content">
-                  <span class="category"
-                    ><a href="portfolio-details.html">Our Gallery</a></span
-                  >
-                  <h5>
-                    <a href="portfolio-details.html">Laptop in the office</a>
-                  </h5>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- Gallery Section End -->
-
-      <!-- News Section Start -->
-      <section class="news-section pb-90 rpb-70">
-        <div class="container">
-          <div class="section-title text-center mb-55">
-            <span class="sub-title">Recent Articles</span>
-            <h2>Latest News from Us</h2>
-          </div>
-          <div class="row justify-content-center">
-            <div class="col-lg-4 col-sm-6">
-              <div class="news-item wow fadeInUp delay-0-2s">
-                <div class="image">
-                  <img src="assets/images/news/news-1.jpg" alt="News" />
-                </div>
-                <div class="news-content">
-                  <ul class="post-meta-item">
-                    <li>
-                      <i class="fas fa-calendar-alt"></i>
-                      <a href="#" rel="bookmark">22 December 2021</a>
-                    </li>
-                    <li>
-                      <i class="fas fa-tag"></i>
-                      <a href="#">it service</a>
-                    </li>
-                  </ul>
-                  <h4>
-                    <a href="blog-details.html"
-                      >Keep Your Business Safe & Ensure High Availability.</a
-                    >
-                  </h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisc ingelit sed
-                    do eiusmod
-                  </p>
-                </div>
-                <div class="news-author">
-                  <img
-                    src="assets/images/news/news-author-1.jpg"
-                    alt="Authro"
-                  />
-                  <span class="posted-by"> By <a href="#">Admin</a> </span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <div class="news-item wow fadeInUp delay-0-4s">
-                <div class="image">
-                  <img src="assets/images/news/news-2.jpg" alt="News" />
-                </div>
-                <div class="news-content">
-                  <ul class="post-meta-item">
-                    <li>
-                      <i class="fas fa-calendar-alt"></i>
-                      <a href="#" rel="bookmark">22 December 2021</a>
-                    </li>
-                    <li>
-                      <i class="fas fa-tag"></i>
-                      <a href="#">it service</a>
-                    </li>
-                  </ul>
-                  <h4>
-                    <a href="blog-details.html"
-                      >Keep Your Business Safe & Ensure High Availability.</a
-                    >
-                  </h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisc ingelit sed
-                    do eiusmod
-                  </p>
-                </div>
-                <div class="news-author">
-                  <img
-                    src="assets/images/news/news-author-2.jpg"
-                    alt="Authro"
-                  />
-                  <span class="posted-by"> By <a href="#">Admin</a> </span>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <div class="news-item wow fadeInUp delay-0-6s">
-                <div class="image">
-                  <img src="assets/images/news/news-3.jpg" alt="News" />
-                </div>
-                <div class="news-content">
-                  <ul class="post-meta-item">
-                    <li>
-                      <i class="fas fa-calendar-alt"></i>
-                      <a href="#" rel="bookmark">22 December 2021</a>
-                    </li>
-                    <li>
-                      <i class="fas fa-tag"></i>
-                      <a href="#">it service</a>
-                    </li>
-                  </ul>
-                  <h4>
-                    <a href="blog-details.html"
-                      >Keep Your Business Safe & Ensure High Availability.</a
-                    >
-                  </h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisc ingelit sed
-                    do eiusmod
-                  </p>
-                </div>
-                <div class="news-author">
-                  <img
-                    src="assets/images/news/news-author-3.jpg"
-                    alt="Authro"
-                  />
-                  <span class="posted-by"> By <a href="#">Admin</a> </span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- News Section End -->
 
       <!-- Footer Area Start -->
       <footer class="main-footer footer-one text-white">
@@ -785,7 +504,7 @@
         >
           <div class="container">
             <div class="row">
-              <div class="col-lg-3 col-sm-6">
+              <div class="col-lg-5 col-sm-6">
                 <div class="footer-widget about-widget">
                   <div class="footer-logo mb-35">
                     <a href="index.html"
@@ -793,60 +512,42 @@
                     /></a>
                   </div>
                   <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore
+                    For all your computer related issues get in touch with our
+                    certified technicians on +61 452 441 530
                   </div>
                 </div>
               </div>
-              <div class="col-lg-2 col-sm-6">
+              <div class="col-lg-3 col-sm-6">
                 <div class="footer-widget link-widget ml-20 rml-0">
                   <h4 class="footer-title">Page Links</h4>
                   <ul class="list-style-two">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">services</a></li>
-                    <li><a href="#">portfolio</a></li>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">page</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
                   </ul>
                 </div>
               </div>
-              <div class="col-lg-3 col-sm-6">
+              <div class="col-lg-4 col-sm-6 pull-right">
                 <div class="footer-widget contact-widget mr-30 rmr-0">
                   <h4 class="footer-title">Contacts</h4>
                   <ul class="list-style-two">
                     <li>
-                      <i class="fas fa-map-marker-alt"></i> 1791 Yorkshire
-                      Circle Kitty Hawk, NC 27949
+                      <i class="fas fa-map-marker-alt"></i> Gregory Hills 2557
+                      NSW
                     </li>
                     <li><i class="fas fa-clock"></i> Mon-Sat 9:00 - 7:00</li>
                     <li>
                       <i class="fas fa-phone-alt"></i>
-                      <a href="callto:+012-345-6789">+012-345-6789</a>
+                      <a href="callto:+61 452 441 530">+61 452 441 530</a>
                     </li>
                     <li>
                       <i class="fas fa-envelope"></i>
-                      <a href="mailto:info@example.com">info@example.com</a>
+                      <a href="mailto:jdcomputers@gmail.com"
+                        >jdcomputers@gmail.com</a
+                      >
                     </li>
                   </ul>
-                </div>
-              </div>
-              <div class="col-lg-4 col-sm-6">
-                <div class="footer-widget newsletter-widget">
-                  <h4 class="footer-title">Newsletter</h4>
-                  <p>
-                    Lorem ipsum dolor sit amet, <br />consectetur adipisicing
-                  </p>
-                  <form action="#" method="post">
-                    <input
-                      type="email"
-                      name="EMAIL"
-                      placeholder="Your Email Address"
-                      required
-                    />
-                    <button value="submit">
-                      <i class="fa fa-location-arrow"></i>
-                    </button>
-                  </form>
                 </div>
               </div>
             </div>
