--- a/site/contact.html
+++ b/site/contact.html
@@ -54,7 +54,9 @@
         <div class="header-top bg-lighter py-10">
           <div class="top-left">
             <ul>
-              <li>Call Us: <a href="callto:548978478">548978478</a></li>
+              <li>
+                Call Us: <a href="callto:+61 452 441 530">+61 452 441 530</a>
+              </li>
               <li>
                 Email us:
                 <a href="mailto:jdcomputers@gmail.com">jdcomputers@gmail.com</a>
@@ -314,7 +316,7 @@
                 <i class="fas fa-phone-alt"></i>
                 <div class="content">
                   <span>Call Us</span>
-                  <h5><a href="callto:+012-345-6789">+012-345-6789</a></h5>
+                  <h5><a href="callto:+61 452 441 530">+61 452 441 530</a></h5>
                 </div>
               </li>
               <li>
@@ -322,7 +324,9 @@
                 <div class="content">
                   <span>Write to Us</span>
                   <h5>
-                    <a href="mailto:info@example.com">info@example.com</a>
+                    <a href="mailto:jdcomputers@gmail.com"
+                      >jdcomputers@gmail.com</a
+                    >
                   </h5>
                 </div>
               </li>
@@ -352,7 +356,7 @@
                     <li>
                       <i class="fas fa-map-marker-alt"></i
                       ><span
-                        >1791 Yorkshire Circle <br />Kitty Hawk, NC 279499</span
+                        >Gregory Hills 2557 NSW</span
                       >
                     </li>
                   </ul>
@@ -363,10 +367,9 @@
                   <h4 class="footer-title">Page Links</h4>
                   <ul class="list-style-two">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">services</a></li>
-                    <li><a href="#">portfolio</a></li>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">page</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
                   </ul>
                 </div>
               </div>
