--- a/site/services.html
+++ b/site/services.html
@@ -53,7 +53,9 @@
         <div class="header-top bg-lighter py-10">
           <div class="top-left">
             <ul>
-              <li>Call Us: <a href="callto:548978478">548978478</a></li>
+              <li>
+                Call Us: <a href="callto:+61 452 441 530">+61 452 441 530</a>
+              </li>
               <li>
                 Email us:
                 <a href="mailto:jdcomputers@gmail.com">jdcomputers@gmail.com</a>
@@ -127,13 +129,13 @@
                       <li class="current">
                         <a href="index.html">Home</a>
                       </li>
-                      <li>
+                      <!-- <li>
                         <a href="about.html">About Us</a>
                       </li>
                       <li>
                         <a href="services.html">service</a>
                       </li>
-                      <li><a href="contact.html">Contact</a></li>
+                      <li><a href="contact.html">Contact</a></li> -->
                     </ul>
                   </div>
                 </nav>
@@ -541,7 +543,7 @@
                         <div class="content">
                           <span>Call Us</span>
                           <h5>
-                            <a href="callto:+012-345-6789">+012-345-6789</a>
+                            <a href="callto:+61 452 441 530">+61 452 441 530</a>
                           </h5>
                         </div>
                       </li>
@@ -550,8 +552,8 @@
                         <div class="content">
                           <span>Write to Us</span>
                           <h5>
-                            <a href="mailto:info@example.com"
-                              >info@example.com</a
+                            <a href="mailto:jdcomputers@gmail.com"
+                              >jdcomputers@gmail.com</a
                             >
                           </h5>
                         </div>
@@ -585,7 +587,7 @@
                 <i class="fas fa-phone-alt"></i>
                 <div class="content">
                   <span>Call Us</span>
-                  <h5><a href="callto:+012-345-6789">+012-345-6789</a></h5>
+                  <h5><a href="callto:+61 452 441 530">+61 452 441 530</a></h5>
                 </div>
               </li>
               <li>
@@ -593,7 +595,9 @@
                 <div class="content">
                   <span>Write to Us</span>
                   <h5>
-                    <a href="mailto:info@example.com">info@example.com</a>
+                    <a href="mailto:jdcomputers@gmail.com"
+                      >jdcomputers@gmail.com</a
+                    >
                   </h5>
                 </div>
               </li>
@@ -622,9 +626,7 @@
                   <ul class="contact-info mt-20">
                     <li>
                       <i class="fas fa-map-marker-alt"></i
-                      ><span
-                        >1791 Yorkshire Circle <br />Kitty Hawk, NC 279499</span
-                      >
+                      ><span>Gregory Hills 2557 NSW</span>
                     </li>
                   </ul>
                 </div>
@@ -634,10 +636,9 @@
                   <h4 class="footer-title">Page Links</h4>
                   <ul class="list-style-two">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">services</a></li>
-                    <li><a href="#">portfolio</a></li>
-                    <li><a href="#">blog</a></li>
-                    <li><a href="#">page</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
                   </ul>
                 </div>
               </div>
