--- a/site/about.html
+++ b/site/about.html
@@ -72,13 +72,13 @@
               <a href="http://facebook.com"
                 ><i class="fab fa-facebook-f"></i
               ></a>
-              <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+              <!-- <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
               <a href="https://www.instagram.com/"
                 ><i class="fab fa-instagram"></i
               ></a>
               <a href="https://www.pinterest.com/"
                 ><i class="fab fa-pinterest-p"></i
-              ></a>
+              ></a> -->
             </div>
           </div>
         </div>
@@ -472,7 +472,8 @@
                         <i class="fas fa-clock"></i>
                         <div class="content">
                           <span>Office hours</span>
-                          <h5>Mon-Sat 9:00 - 7:00</h5>
+                          <h5>Seven Days Open 9:00 - 7:00</h5>
+                          <!-- <h5>Mon-Sat 9:00 - 7:00</h5> -->
                         </div>
                       </li>
                     </ul>
@@ -515,7 +516,8 @@
                 <i class="fas fa-clock"></i>
                 <div class="content">
                   <span>Office hours</span>
-                  <h5>Mon-Sat 9:00 - 7:00</h5>
+                  <h5>Seven Days Open 9:00 - 7:00</h5>
+                  <!-- <h5>Mon-Sat 9:00 - 7:00</h5> -->
                 </div>
               </li>
             </ul>
