--- a/site/index.html
+++ b/site/index.html
@@ -72,13 +72,13 @@
               <a href="http://facebook.com"
                 ><i class="fab fa-facebook-f"></i
               ></a>
-              <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+              <!-- <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
               <a href="https://www.instagram.com/"
                 ><i class="fab fa-instagram"></i
               ></a>
               <a href="https://www.pinterest.com/"
                 ><i class="fab fa-pinterest-p"></i
-              ></a>
+              ></a> -->
             </div>
           </div>
         </div>
@@ -99,13 +99,13 @@
               </div>
 
               <div
-                class="d-flex justify-content-between align-items-center w-100"
+                class="d-flex justify-content-between align-items-center w-100  "
               >
                 <!-- Main Menu -->
 
-                <h3 class="d-flex">
+                <h3 class="d-flex ">
                   <div class="col-lg-5 col-sm-12">7 DAYS OPEN</div>
-                  <div class="col-lg-7 col-sm-12">Call +61 452 441 530</div>
+                  <div class="col-lg-9 col-sm-12">Call +61 452 441 530</div>
                 </h3>
 
                 <!-- Main Menu End-->
@@ -536,7 +536,9 @@
                       <i class="fas fa-map-marker-alt"></i> Gregory Hills 2557
                       NSW
                     </li>
-                    <li><i class="fas fa-clock"></i> Mon-Sat 9:00 - 7:00</li>
+                   
+                    <li><i class="fas fa-clock"></i>Seven Days Open 9:00 - 7:000</li>
+                    <!-- <li><i class="fas fa-clock"></i> Mon-Sat 9:00 - 7:00</li> -->
                     <li>
                       <i class="fas fa-phone-alt"></i>
                       <a href="callto:+61 452 441 530">+61 452 441 530</a>
