--- a/site/404.html
+++ b/site/404.html
@@ -59,7 +59,7 @@
               </li>
               <li>
                 Email us:
-                <a href="mailto:jdcomputers@gmail.com">jdcomputers@gmail.com</a>
+                <a href="mailto:avvysingh@jdcomputers.com.au">avvysingh@jdcomputers.com.au</a>
               </li>
               <li>Our address: Gregory Hills 2557</li>
             </ul>
@@ -146,7 +146,7 @@
 
                 <!-- Menu Button -->
                 <div class="menu-btn">
-                  <a href="contact.html" class="theme-btn">meet with us</a>
+                  <a href="contact.html" class="theme-btn">Contact Us</a>
                 </div>
               </div>
             </div>
@@ -213,8 +213,8 @@
                 <div class="content">
                   <span>Write to Us</span>
                   <h5>
-                    <a href="mailto:jdcomputers@gmail.com"
-                      >jdcomputers@gmail.com</a
+                    <a href="mailto:avvysingh@jdcomputers.com.au"
+                      >avvysingh@jdcomputers.com.au</a
                     >
                   </h5>
                 </div>
@@ -301,16 +301,16 @@
           <div class="container">
             <div class="copyright-inner pt-15">
               <div class="social-style-one mb-10">
-                <a href="http://facebook.com"
+                <a target="_blank" href="https://www.facebook.com/profile.php?id=100087388017767"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
-                <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+                <!-- <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/"
                   ><i class="fab fa-instagram"></i
                 ></a>
                 <a href="https://www.pinterest.com/"
                   ><i class="fab fa-pinterest-p"></i
-                ></a>
+                ></a> -->
               </div>
               <p>copyright 2022 JD Computers All Rights Reserved.</p>
             </div>
