--- a/site/index.html
+++ b/site/index.html
@@ -59,7 +59,7 @@
               </li>
               <li>
                 Email us:
-                <a href="mailto:jdcomputers@gmail.com">jdcomputers@gmail.com</a>
+                <a href="mailto:avvysingh@jdcomputers.com.au">avvysingh@jdcomputers.com.au</a>
               </li>
               <li>Our address: Gregory Hills 2557</li>
             </ul>
@@ -112,7 +112,7 @@
 
                 <!-- Menu Button -->
                 <div class="menu-btn">
-                  <a href="contact.html" class="theme-btn">meet with us</a>
+                  <a href="contact.html" class="theme-btn">Contact Us</a>
                 </div>
               </div>
             </div>
@@ -137,7 +137,7 @@
                   Excellent IT services for your success
                 </h1>
                 <div class="hero-btn mt-35 wow fadeInUp delay-0-6s">
-                  <a href="contact.html" class="theme-btn">meet with us</a>
+                  <a href="contact.html" class="theme-btn">Contact Us</a>
                 </div>
               </div>
             </div>
@@ -150,7 +150,7 @@
       <section class="services-section pt-120 rpt-100 pb-90 rpb-70">
         <div class="container">
           <div class="row">
-            <div class="col-xl-3 col-sm-6">
+            <div class="col-xl-4 col-sm-6">
               <div class="service-box wow fadeInUp delay-0-2s">
                 <div class="service-normal">
                   <div class="icon">
@@ -171,7 +171,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-3 col-sm-6">
+            <div class="col-xl-4 col-sm-6">
               <div class="service-box wow fadeInUp delay-0-4s">
                 <div class="service-normal">
                   <div class="icon">
@@ -192,7 +192,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-3 col-sm-6">
+            <!-- <div class="col-xl-3 col-sm-6">
               <div class="service-box wow fadeInUp delay-0-6s">
                 <div class="service-normal">
                   <div class="icon">
@@ -215,8 +215,8 @@
                   >
                 </div>
               </div>
-            </div>
-            <div class="col-xl-3 col-sm-6">
+            </div> -->
+            <div class="col-xl-4 col-sm-6">
               <div class="service-box wow fadeInUp delay-0-8s">
                 <div class="service-normal">
                   <div class="icon">
@@ -383,7 +383,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-xl-4 col-md-6">
+            <!-- <div class="col-xl-4 col-md-6">
               <div class="feature-item wow fadeInUp delay-0-8s">
                 <div class="icon">
                   <i class="flaticon flaticon-analysis-1"></i>
@@ -399,8 +399,8 @@
                   ></a>
                 </div>
               </div>
-            </div>
-            <div class="col-xl-4 col-md-6">
+            </div> -->
+            <!-- <div class="col-xl-4 col-md-6">
               <div class="feature-item wow fadeInUp delay-1-0s">
                 <div class="icon">
                   <i class="flaticon flaticon-web-development"></i>
@@ -416,8 +416,8 @@
                   ></a>
                 </div>
               </div>
-            </div>
-            <div class="col-xl-4 col-md-6">
+            </div> -->
+            <!-- <div class="col-xl-4 col-md-6">
               <div class="feature-item wow fadeInUp delay-1-2s">
                 <div class="icon">
                   <i class="flaticon flaticon-plan"></i>
@@ -433,7 +433,7 @@
                   ></a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
           <div class="feature-btn text-center mt-20">
             <a href="services.html" class="theme-btn">view all services</a>
@@ -454,10 +454,11 @@
             <div class="section-title-with-btn mb-10">
               <div class="section-title">
                 <span class="sub-title">How We Do</span>
-                <h2>Custom IT Solutions <br />for Your Business</h2>
+                <h2>Personalized Solutions <br/> Tailored for you</h2>
+                <!-- <h2>Custom IT Solutions <br />for Your Business</h2> -->
               </div>
               <a href="contact.html" class="theme-btn style-two mt-15"
-                >meet with us</a
+                >Contact Us</a
               >
             </div>
             <div class="row justify-content-between">
@@ -522,9 +523,9 @@
                   <h4 class="footer-title">Page Links</h4>
                   <ul class="list-style-two">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Services</a></li>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="/about.html">About Us</a></li>
+                    <li><a href="/services.html">Services</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
                   </ul>
                 </div>
               </div>
@@ -545,8 +546,8 @@
                     </li>
                     <li>
                       <i class="fas fa-envelope"></i>
-                      <a href="mailto:jdcomputers@gmail.com"
-                        >jdcomputers@gmail.com</a
+                      <a href="mailto:avvysingh@jdcomputers.com.au"
+                        >avvysingh@jdcomputers.com.au</a
                       >
                     </li>
                   </ul>
@@ -559,16 +560,16 @@
           <div class="container">
             <div class="copyright-inner pt-15">
               <div class="social-style-one mb-10">
-                <a href="http://facebook.com"
+                <a target="_blank" href="https://www.facebook.com/profile.php?id=100087388017767"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
-                <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+                <!-- <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.instagram.com/"
                   ><i class="fab fa-instagram"></i
                 ></a>
                 <a href="https://www.pinterest.com/"
                   ><i class="fab fa-pinterest-p"></i
-                ></a>
+                ></a> -->
               </div>
               <p>copyright 2022 JD Computers All Rights Reserved.</p>
             </div>
