--- a/site/index.html
+++ b/site/index.html
@@ -69,7 +69,7 @@
               <i class="far fa-clock"></i><span>08:00 am - 06:00 pm</span>
             </div>
             <div class="social-style-one">
-              <a href="http://facebook.com"
+              <a  target="_blank" href="https://www.facebook.com/profile.php?id=100087388017767"
                 ><i class="fab fa-facebook-f"></i
               ></a>
               <!-- <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
